# AnifusionCanvas

./: .gitignore  README.md  package.json  アプリケーション要件定義書.md  ファインチューニング要件定義書.md  開発前セットアップ手順.md
apps/api/: .env.example  pyproject.toml
apps/api/app/: config.py  main.py
apps/web/: biome.json  package.json  playwright.config.ts  vitest.config.ts
apps/web/tests/unit/: smoke.test.ts
backend/: .env.example  README.md  main.py  modal_app.py  pyproject.toml
backend/scripts/: download_models.py  preflight_check.py
frontend/: README.md  biome.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: backend-status.tsx  canvas-editor.tsx
frontend/src/lib/: config.ts  fetcher.ts
frontend/src/store/: editor-store.ts
